fix too long option in select due to #37

--- a/src/sass/default/async/SelectMenuField.sass
+++ b/src/sass/default/async/SelectMenuField.sass
@@ -42,3 +42,10 @@
 
   &__hidden-input
     +hidden-input
+
+  .css-1rtrksz
+    max-width: 100%
+
+    > div
+      max-width: 100%
+      width: auto !important
